--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "tsparticles": "^3.8.0",
     "tsparticles-engine": "^2.12.0",
     "typescript": "5.2.2",
+    "typewriter-effect": "^2.21.0",
     "vanta": "^0.5.24",
     "vaul": "^0.9.9",
     "xlsx": "^0.18.5",
